--- a/compa-webpage/public/index.html
+++ b/compa-webpage/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" >
-    <link rel="icon" href="%PUBLIC_URL%/logo.webp" >
+    <link rel="icon" href="%PUBLIC_URL%/images/logo-small.png" >
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="theme-color" content="#000000" >
     <meta
-      name="COMPA"
+      name="compa"
       content="Listos para transformar el agro Colombiano"
     >
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" >
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" >
-    <title>COMPA</title>
+    <title>Compa</title>
   </head>
   <body>
     <noscript>Compa</noscript>
