--- a/compa-webpage/public/index.html
+++ b/compa-webpage/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" >
-    <link rel="icon" href="%PUBLIC_URL%/images/logo-small.png" >
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
-    <meta name="theme-color" content="#000000" >
-    <meta
-      name="compa"
-      content="Listos para transformar el agro Colombiano"
-    >
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" >
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" >
-    <title>Compa</title>
-  </head>
-  <body>
-    <noscript>Compa</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="icon" href="%PUBLIC_URL%/images/logo-small.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#000000">
+  <meta name="compa" content="Listos para transformar el agro Colombiano">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <title>Compa</title>
+</head>
+
+<body>
+  <noscript>Compa</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
